# Solitude

./: .gitignore  Cargo.toml  JUPITER.md  readme.md  wallet.json
archived/: Cargo.toml
archived/raydium-amm/src/: math.rs
archived/src/: mev_helpers.rs
archived/src/config/: wallet.rs
poc/: index.ts  package.json  poc2.ts  readme.md
queryserver/: index.ts  package.json  test.ts
raydium-amm/src/: processor.rs
src/: lib.rs  main.rs  mev_helpers.rs  utils.rs
src/config/: mod.rs  nodes.rs  wallet.rs
src/jito/: client_interceptor.rs  cluster_data_impl.rs  convert.rs  mod.rs
src/local_api/: mod.rs
src/openserum_api/: mod.rs
src/raydium/: market.rs  mod.rs  public_api.rs  utils.rs
