[package]
name = "solitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "gzip"] }
serde = "1.0.193"
serde_json = "1.0.108"
solana-program = "~1.16.1"
solana-runtime = "~1.16.1"
solana-sdk = "~1.16.1"
solana-perf = "~1.16.1"
solana-metrics = "~1.16.1"
solana-client = "~1.16.1"
solana-transaction-status = "~1.16.1"
#solana-client = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.27-jito" }
#solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.27-jito" }
#solana-perf = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.27-jito" }
#solana-program = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.27-jito" }
#solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.27-jito" }
tokio = { version = "1.14.1", features = ["full"] }
jito-protos = { path = "./protos" }
log = "0.4.20"
tonic = { version = "0.8.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
thiserror = "1.0.52"
raydium_amm = { version = "0.3.0", path = "raydium-amm" }
prost-types = "0.11.8"
futures-util = "0.3.30"
tonic-build = "0.10.2"
spl-memo = "4.0.0"
# openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2", features = ["enable-gpl"] }
# spl-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"
raydium-contract-instructions = { git = "https://github.com/raydium-io/raydium-contract-instructions", version = "0.1.0" }
lazy_static = "1.4.0"
base64 = "0.21.5"
bs58 = "0.5.0"
solana-account-decoder = "1.10.20"
hex = "0.4.3"
chrono = "0.4.31"
openssl = { version = "0.10", features = ["vendored"] }
colored = "2.1.0"
device_query = "1.1.3"
crossterm = "0.27.0"
termion = "3.0.0"
inquire = "0.6.2"
anyhow = "1.0.79"

[profile.performance]
inherits = "release"
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = false
